--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/sweaterdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=32167
+spring.jpa.generate-ddl=true
+
+spring.mustache.expose-request-attributes=true
