--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=32167
 spring.jpa.generate-ddl=true
 
-spring.mustache.expose-request-attributes=true
+spring.freemaker.expose-request-attributes=true
