--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=32167
 spring.jpa.generate-ddl=true
 
 spring.freemaker.expose-request-attributes=true
+
+upload.path=/D:/Downloads/sweater
