--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.jpa.generate-ddl=true
 spring.freemaker.expose-request-attributes=true
 
 upload.path=/D:/Downloads/sweater
+
+spring.mail.host = smtp.yandex.ru
+spring.mail.username = sweaterservice@yandex.com
+spring.mail.password = 32167Sweater
+spring.mail.port = 465
+spring.mail.protocol = smtps
+mail.debug = true
