--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sweaterdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=32167
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl = false
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.show-sql = true
 
 spring.freemaker.expose-request-attributes=true
 
