--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.password = 32167Sweater
 spring.mail.port = 465
 spring.mail.protocol = smtps
 mail.debug = true
+
+recaptcha.secret = 6LdHr2QUAAAAAF_6ZWlMqKnzlgP0uHLY3H3IoZge
