--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.mail.protocol = smtps
 mail.debug = true
 
 recaptcha.secret = 6LdHr2QUAAAAAF_6ZWlMqKnzlgP0uHLY3H3IoZge
+
+spring.session.jdbc.initialize-schema = always
+spring.session.jdbc.table-name = SPRING_SESSION
