prepare sweater to deploy

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql = true
 
 spring.freemaker.expose-request-attributes=true
 
-upload.path=/home/lless/uploads
+upload.path=/D:/Downloads/sweater
 
 spring.mail.host = smtp.yandex.ru
 spring.mail.username = sweaterservice@yandex.com
@@ -21,4 +21,4 @@ recaptcha.secret = 6LdHr2QUAAAAAF_6ZWlMqKnzlgP0uHLY3H3IoZge
 spring.session.jdbc.initialize-schema = always
 spring.session.jdbc.table-name = SPRING_SESSION
 
-hostname=192.168.0.10
+hostname = localhost:8080
