change mail properties
yandex forced to change the password
service now has another ip

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ upload.path=/D:/Downloads/sweater
 
 spring.mail.host = smtp.yandex.ru
 spring.mail.username = sweaterservice@yandex.com
-spring.mail.password = 32167Sweater
+spring.mail.password = Sweater32167
 spring.mail.port = 465
 spring.mail.protocol = smtps
 mail.debug = true
