--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ upload.path=/home/lless/uploads
 
 spring.mail.host = smtp.yandex.ru
 spring.mail.username = sweaterservice@yandex.com
-spring.mail.password = 32167Sweater
+spring.mail.password = Sweater32167
 spring.mail.port = 465
 spring.mail.protocol = smtps
 mail.debug = true
@@ -21,4 +21,4 @@ recaptcha.secret = 6LdHr2QUAAAAAF_6ZWlMqKnzlgP0uHLY3H3IoZge
 spring.session.jdbc.initialize-schema = always
 spring.session.jdbc.table-name = SPRING_SESSION
 
-hostname=192.168.0.10
+hostname=localhost:8080
