--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql = true
 
 spring.freemaker.expose-request-attributes=true
 
-upload.path=/D:/Downloads/sweater
+upload.path=/C:/Code/sweaterDownloads
 
 spring.mail.host = smtp.yandex.ru
 spring.mail.username = sweaterservice@yandex.com
